move API to rust
